--- a/scss/components/_aboutMe.scss
+++ b/scss/components/_aboutMe.scss
@@ -38,6 +38,7 @@
                 display: flex;
                 grid-column: 2;
                 grid-row: 2;
+                background-color: white;
             }
 
             .icon{
@@ -94,9 +95,9 @@
                 
                 @media screen and (max-width: 768px){
                     position: absolute;
-                    left: 29em;
-                    width: 8em;
-                    top: -7em;
+                    left: 90%;
+                    width: fit-content;
+                    top: -70%;
                 }
 
                 .button-v {
