--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
   list-style: none;
   word-wrap: break-word;
   box-sizing: border-box;
-  color: #000;
+  color: white;
   line-height: 1.3;
   font-weight: 400;
   font-size: 14px;
@@ -40,7 +40,7 @@ body p {
   font-family: "Lato", sans-serif;
   font-size: 15px;
   font-weight: 400;
-  color: #999;
+  color: white;
   line-height: 1.8;
   margin: 0;
 }
@@ -619,166 +619,66 @@ input[type=radio][id=metal]:checked ~ .packaging {
 }
 
 /* ========== FIN PORTFOLIO =========*/
-footer {
-  margin-top: 50px;
-  width: 100%;
-  height: 100%;
-  background-color: #343a40;
-}
-footer .contact-button {
-  z-index: 2;
-  display: flex;
-  align-items: center;
-}
-footer .contact-button h4 {
-  writing-mode: vertical-lr;
-  background-color: #004d4d;
-  padding: 0.5em;
+#footer .background {
   color: white;
-  font-family: "Lato", sans-serif;
-  position: relative;
-  height: fit-content;
-  margin-left: 8em;
-  letter-spacing: 0.2em;
+  font-size: 14px;
+  background: rgba(0, 77, 77, 0.8);
 }
-@media screen and (max-width: 768px) {
-  footer .contact-button h4 {
-    position: absolute;
-    left: 0;
-    margin: 0;
-  }
+#footer .background .footer-top .footer-contact h4 {
+  font-size: 22px;
+  margin-top: 30px;
+  padding: 2px 0 2px 0;
+  line-height: 1;
+  font-weight: 700;
 }
-footer .contact-form {
-  height: fit-content;
-  align-self: center;
-  margin: 2% -6em 2% -3.2em;
-  width: auto;
-  background-color: white;
-  z-index: 0;
-}
-@media screen and (max-width: 768px) {
-  footer .contact-form {
-    height: fit-content;
-    margin: 2% 0;
-    background-color: white;
-    z-index: 0;
-  }
-}
-@media screen and (max-width: 768px) {
-  footer .contact-form .inputs {
-    width: 100%;
-    margin-top: 0;
-  }
-}
-footer .contact-form .name {
-  padding-left: 4em;
-}
-@media screen and (max-width: 768px) {
-  footer .contact-form .name {
-    padding: 0 2em 0 4em;
-  }
-}
-footer .contact-form .name .invalid-feedback {
-  display: none;
-}
-footer .contact-form .email {
-  padding-right: 2em;
-}
-@media screen and (max-width: 768px) {
-  footer .contact-form .email {
-    padding-left: 4em;
-  }
-}
-footer .contact-form .email .invalid-feedback {
-  display: none;
-}
-footer .contact-form .message {
-  padding: 0 2em 0 4em;
-}
-footer .contact-form .send {
-  display: flex;
-  justify-content: flex-end;
-  padding: 0 2em 1em 0;
-}
-footer .contact-form .send .btn {
-  background-color: #004d4d;
-  color: white;
-  position: relative;
-  transition: 0.5s;
-}
-footer .contact-form .send .btn:after {
-  content: "»";
-  position: absolute;
-  opacity: 0;
-  top: auto;
-  right: -20px;
-  transition: 0.5s;
-}
-footer .contact-form .send .btn:hover {
-  padding-right: 24px;
-  padding-left: 8px;
-}
-footer .contact-form .send .btn:hover:after {
-  opacity: 1;
-  right: 10px;
-  color: white;
-}
-footer .sn-container {
-  margin: 2% 10% 2% 0;
-  background-color: #004d4d;
-  padding: 4% 4% 4% 10%;
-  border-radius: 0.3em;
-  font-size: 3em;
-  color: white;
-  display: flex;
-  flex-flow: wrap;
-  max-width: 8em;
-}
-@media screen and (max-width: 768px) {
-  footer .sn-container {
-    position: absolute;
-    right: 0;
-    padding: 5%;
-    padding-bottom: 2.5em;
-    font-size: 2em;
-    border-radius: 0;
-    margin: 0;
-    height: 85%;
-  }
-}
-footer .sn-container .footer-sn {
-  flex-flow: column wrap;
-}
-footer .sn-container .footer-sn .icon a {
-  color: white;
-}
-footer .sn-container .footer-sn .icon a:hover {
-  color: rgba(44, 38, 38, 0.5);
-  cursor: pointer;
-}
-footer .BackToTop-container {
-  align-items: baseline;
-  justify-content: center;
-  display: flex;
-}
-footer .BackToTop-container a {
-  text-decoration: none;
-  color: white;
-  font-size: 1em;
-  padding: 0 0.5em;
-}
-footer .BackToTop-container a p {
-  color: white;
-  font-size: 1.5em;
-}
-footer .BackToTop-container a p:hover {
-  color: #004d4d;
-  transform: scale(1.1);
-  cursor: pointer;
-}
-footer .BackToTop-container .backToTop {
+#footer .background .footer-top .footer-contact p {
+  font-size: 14px;
+  line-height: 24px;
+  margin-bottom: 10px;
   font-family: "Montserrat", sans-serif;
-  padding: 1rem;
+  color: white;
+}
+#footer .socialFooter {
+  padding-bottom: 1.5rem !important;
+}
+#footer .socialFooter .social-links a {
+  font-size: 18px;
+  display: inline-block;
+  background: #343a40;
+  color: white;
+  line-height: 1;
+  padding: 8px 0;
+  margin-right: 4px;
+  border-radius: 50%;
+  text-align: center;
+  width: 36px;
+  height: 36px;
+  transition: 0.3s;
+}
+#footer .socialFooter .social-links a:hover {
+  background: white;
+  color: #343a40;
+  text-decoration: none;
+}
+#footer .BackToTop-container {
+  display: flex;
+  justify-content: center;
+  align-items: baseline;
+  padding-bottom: 10px;
+}
+#footer .BackToTop-container .arrowUp {
+  color: #004d4d;
+}
+#footer .BackToTop-container a {
+  text-decoration: none;
+}
+#footer .BackToTop-container p {
+  color: #343a40;
+  font-size: 16px;
+  padding: 0 20px;
+}
+#footer .BackToTop-container p:hover {
+  color: rgba(0, 77, 77, 0.8);
 }
 
 /* ========= FIN Footer ========= */
