--- a/scss/components/_main.scss
+++ b/scss/components/_main.scss
@@ -14,7 +14,7 @@ body {
     list-style: none;
     word-wrap: break-word;
     box-sizing: border-box;
-    color: #000;
+    color: $txt-color;
     line-height: 1.3;
     font-weight: 400;
     font-size: 14px;
@@ -25,7 +25,7 @@ body {
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     font-weight: 400;
-    color: #999;
+    color: $txt-color;
     line-height: 1.8;
     margin: 0;
     }
