--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -24,6 +24,6 @@ $bg-gr-opa: rgba(44, 38, 38, 0.5);
 
 /* ===== Shadow ===== */
 $shadow: 0 .5rem 1rem rgba(0,0,0,.15);
-
+$shadow-port:  10px 10px 5px #BFBFBF;
 
 $scrollLength: 100vh;
