--- a/scss/components/_mainTitle.scss
+++ b/scss/components/_mainTitle.scss
@@ -10,7 +10,7 @@
 
  
 #title {
-    background-image: url(/img/imagen.png);
+    background-image: url(/bg.png);
     background-color: $bg-gr-opa;
     background-position: center center;
     background-repeat: no-repeat;
