--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ body p {
 
 /* ========= TITLE  ========= */
 #title {
-  background-image: url(/img/imagen.png);
+  background-image: url(/bg.png);
   background-color: rgba(44, 38, 38, 0.5);
   background-position: center center;
   background-repeat: no-repeat;
@@ -380,6 +380,9 @@ body p {
   font-style: italic;
   margin-bottom: 20px;
 }
+.skills .feat-item .text-center p {
+  color: #343a40;
+}
 .skills .extra-title {
   margin-bottom: 30px;
 }
@@ -556,6 +559,9 @@ input[type=radio][id=metal]:checked ~ .packaging {
 .gallery-image .each-item {
   position: relative;
   overflow: hidden;
+  border: 1px solid #BFBFBF;
+  border-radius: 10px;
+  box-shadow: 10px 10px 5px #BFBFBF;
 }
 
 .gallery-image:hover .cap2, .gallery-image:hover .cap1 {
@@ -624,22 +630,33 @@ input[type=radio][id=metal]:checked ~ .packaging {
   font-size: 14px;
   background: rgba(0, 77, 77, 0.8);
 }
+#footer .background .footer-top {
+  display: flex;
+  justify-content: center;
+}
+#footer .background .footer-top .footer-contact {
+  font-family: "Lato", sans-serif;
+}
 #footer .background .footer-top .footer-contact h4 {
   font-size: 22px;
-  margin-top: 30px;
-  padding: 2px 0 2px 0;
+  font-family: "Montserrat", sans-serif;
+  margin-top: 25px;
   line-height: 1;
   font-weight: 700;
+  display: flex;
+  justify-content: center;
 }
 #footer .background .footer-top .footer-contact p {
   font-size: 14px;
   line-height: 24px;
-  margin-bottom: 10px;
-  font-family: "Montserrat", sans-serif;
   color: white;
+  display: flex;
+  justify-content: center;
 }
 #footer .socialFooter {
   padding-bottom: 1.5rem !important;
+  justify-content: center;
+  margin-top: 10px;
 }
 #footer .socialFooter .social-links a {
   font-size: 18px;
@@ -725,157 +742,55 @@ input[type=radio][id=metal]:checked ~ .packaging {
 }
 
 /* ======== Arrow UP ==========*/
-.portfolioGrid .row {
-  width: auto;
+/*========= About ============*/
+.about {
+  padding: 10px 0;
+  color: rgba(44, 38, 38, 0.5);
 }
-.portfolioGrid img {
-  height: 10em;
+.about h3 {
+  font-weight: 600;
+  font-size: 32px;
+}
+.about p {
+  font-size: 15px;
+  color: rgba(44, 38, 38, 0.5);
+  text-align: justify;
 }
 
-/*--VER POR QUE NO ANDA--*/
-.photo-container {
-  display: flex;
-  justify-content: center;
+/*========= END About ============*/
+/*========= Skills ============*/
+#skills {
+  margin-bottom: 30px;
 }
-
-.thumbnails {
-  display: flex;
-  flex-direction: column;
-  line-height: 0;
-}
-.thumbnails li {
-  flex: auto;
-}
-.thumbnails a {
+#skills .progress {
+  height: 60px;
   display: block;
+  background: none;
+  border-radius: 0;
 }
-.thumbnails img {
-  width: 30vmin;
-  height: 20vmin;
-  object-fit: cover;
-  object-position: top;
+#skills .progress .skill {
+  padding: 10px 0;
+  margin: 0 0 6px 0;
+  text-transform: uppercase;
+  display: block;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+  color: #384046;
 }
-
-.slides {
-  overflow: hidden;
-  width: 75vmin;
-  height: 100vmin;
+#skills .progress .skill .val {
+  float: right;
+  font-style: normal;
 }
-.slides li {
-  width: 75vmin;
-  height: 100vmin;
-  position: absolute;
-  z-index: 1;
+#skills .progress .progress-bar-wrap {
+  background: #dcdee0;
 }
-.slides img {
-  height: 100vmin;
-  object-fit: cover;
-  object-position: top;
-}
-
-.slides li:target {
-  z-index: 3;
-  -webkit-animation: slide 1s 1;
+#skills .progress .progress-bar-wrap .progress-bar {
+  width: 50%;
+  height: 10px;
+  transition: 0.9s;
+  background-color: rgba(0, 77, 77, 0.8);
 }
 
-.slides li:not(:target) {
-  -webkit-animation: hidden 1s 1;
-}
-
-@keyframes slide {
-  0% {
-    transform: translateY(-100%);
-  }
-  100% {
-    transform: translateY(0%);
-  }
-}
-@keyframes hidden {
-  0% {
-    z-index: 2;
-  }
-  100% {
-    z-index: 2;
-  }
-}
-.container {
-  text-align: center;
-  margin-bottom: 1em;
-}
-.container ul,
-.container li,
-.container img {
-  margin: 0;
-}
-.container li {
-  list-style: none;
-}
-.container .slides {
-  display: inline-block;
-}
-.container .slides li {
-  width: 10em;
-  display: inline-block;
-  vertical-align: top;
-  margin-bottom: 0.25em;
-}
-.container .slides img {
-  width: 100%;
-}
-.container .thumbnails {
-  display: none;
-}
-
-@media screen and (min-width: 540px) {
-  @supports (object-fit: cover) {
-    .container {
-      display: flex;
-      justify-content: center;
-      margin-bottom: 1em;
-    }
-    .container .slides {
-      overflow: hidden;
-      width: 50vmax;
-    }
-    .container .slides li {
-      position: absolute;
-      z-index: 1;
-      width: initial;
-      display: block;
-    }
-    .container .slides li:target {
-      z-index: 3;
-      -webkit-animation: fade 0.6s 1;
-    }
-    .container .slides li:not(:target) {
-      -webkit-animation: hidden 0.6s 1;
-    }
-    .container .slides img {
-      width: auto;
-      object-fit: cover;
-      object-position: top;
-      height: 37.5vmax;
-    }
-    .container .thumbnails {
-      display: flex;
-      flex-direction: column;
-      line-height: 0;
-      width: 13.75vmax;
-    }
-    .container .thumbnails li {
-      flex: auto;
-    }
-    .container .thumbnails a {
-      display: block;
-      border: 0;
-    }
-    .container .thumbnails img {
-      object-fit: cover;
-      object-position: top;
-      width: 100%;
-      height: calc(37.5vmax / 7);
-    }
-  }
-}
+/*========= END Skills ============*/
 
 /*# sourceMappingURL=style.css.map */
