--- a/scss/components/_footer.scss
+++ b/scss/components/_footer.scss
@@ -6,23 +6,28 @@
     background: $bg-opa;
     
     .footer-top {
-              
+      display: flex;
+      justify-content: center;
+
       .footer-contact {
-              
+        font-family: $font-lato;
+
         h4 {
           font-size: 22px;
-          margin-top: 30px;
-          padding: 2px 0 2px 0;
+          font-family: $font-monse;
+          margin-top: 25px;
           line-height: 1;
           font-weight: 700;
+          display: flex;
+          justify-content: center;
         }
       
         p {
           font-size: 14px;
           line-height: 24px;
-          margin-bottom: 10px;
-          font-family: $font-monse;
           color: $txt-color;
+          display: flex;
+          justify-content: center;
         }
       }  
     } 
@@ -30,6 +35,8 @@
 
   .socialFooter {
     padding-bottom: 1.5rem!important;
+    justify-content: center;
+    margin-top: 10px;
   
     .social-links a {
       font-size: 18px;
@@ -58,7 +65,7 @@
     justify-content: center;
     align-items: baseline; 
     padding-bottom: 10px;
-  
+
     .arrowUp {
       color: $bg-solid;  
     }
