--- a/scss/components/_skills.scss
+++ b/scss/components/_skills.scss
@@ -48,6 +48,10 @@
                     font-style: italic;
                     margin-bottom: 20px;
                 }
+
+                p {
+                    color: $txt-gr;
+                }
         }
     }    
 
