--- a/scss/components/aboutMePAge.scss
+++ b/scss/components/aboutMePAge.scss
@@ -1,9 +1,61 @@
-.portfolioGrid {
+/*========= About ============*/
 
-    .row {
-        width: auto ;
+.about {
+    padding: 10px 0;
+    color: $bg-gr-opa;
+
+    h3 {
+    font-weight: 600;
+    font-size: 32px;
     }
-    img {
-        height: 10em;
+
+    p {
+        font-size: 15px;
+        color: $bg-gr-opa;
+        text-align: justify;
     }
 }
+
+/*========= END About ============*/
+  
+/*========= Skills ============*/
+
+#skills { 
+    margin-bottom: 30px;
+
+    .progress {
+    height: 60px;
+    display: block;
+    background: none;
+    border-radius: 0;
+
+        .skill {
+            padding: 10px 0;
+            margin: 0 0 6px 0;
+            text-transform: uppercase;
+            display: block;
+            font-weight: 600;
+            font-family: "Poppins", sans-serif;
+            color: #384046;
+
+            .val {
+                float: right;
+                font-style: normal;
+            }
+        }
+    
+        .progress-bar-wrap {
+            background: #dcdee0;
+
+            .progress-bar {
+                width: 50%;
+                height: 10px;
+                transition: .9s;
+                background-color: $bg-opa;
+            }
+        }
+    }
+}
+  
+  
+/*========= END Skills ============*/
