cambios portfolio individual

--- a/scss/base/_import.scss
+++ b/scss/base/_import.scss
@@ -23,6 +23,7 @@
 @import '../components/footer';
 @import '../components/arrowUp';
 @import '../components/aboutMePage';
+@import '../components/portfolio-details';
 
 
 
