--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -10,6 +10,8 @@ $Subtitle-size: 2em;
 
 /*========== Colors ==========*/
 
+/*-- Action things = Gray */
+
 $txt-color: white;
 $subtxt-color: black;
 $txt-gr:  #343a40;
