--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 /*========== Fonts ==========*/
 /*========== Title ==========*/
 /*========== Colors ==========*/
+/*-- Action things = Gray */
 /* ===== Shadow ===== */
 /* Components */
 /* ========= Generales a toda la pagina  ========= */
@@ -40,9 +41,14 @@ body p {
   font-family: "Lato", sans-serif;
   font-size: 15px;
   font-weight: 400;
-  color: white;
   line-height: 1.8;
   margin: 0;
+}
+
+.breadcrumb {
+  display: flex;
+  justify-content: flex-end;
+  margin-right: 4%;
 }
 
 /* ========= FIN Generales a toda la pagina  ========= */
@@ -182,107 +188,70 @@ body p {
 /* ========= FIN TITLE  ========= */
 /* ============= ABOUT ME ============= */
 #about {
-  margin-top: 2em;
-  margin-bottom: 12em;
-  max-height: 200px;
-  padding-top: 1rem !important;
-  margin-right: auto !important;
-  margin-left: auto !important;
-}
-@media screen and (max-width: 768px) {
-  #about {
-    justify-content: center !important;
-    max-height: fit-content;
-  }
-}
-#about .container-about {
-  display: grid;
-  position: relative;
-  grid-template-columns: repeat(12, 1fr);
-}
-@media screen and (max-width: 768px) {
-  #about .container-about {
-    display: grid;
-    position: relative;
-    grid-template-columns: repeat(12, 2fr);
-    box-shadow: none;
-  }
-}
-#about .container-about .container-img {
   display: flex;
-  grid-column: 3/-1;
-  grid-row: 1;
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+#about p {
+  color: #343a40;
+}
+#about .left {
+  padding-left: 10%;
 }
 @media screen and (max-width: 768px) {
-  #about .container-about .container-img {
-    margin-top: -10em;
-    display: flex;
-    grid-column: 2;
-    grid-row: 2;
-    background-color: white;
+  #about .left {
+    order: 3;
   }
 }
-#about .container-about .container-img .icon {
-  position: relative;
-  right: 8.5em;
-  z-index: 3;
-  align-self: center;
+#about .left .row {
+  height: 50%;
 }
 @media screen and (max-width: 768px) {
-  #about .container-about .container-img .icon {
+  #about .left .row {
+    height: 0%;
+  }
+}
+#about .left .row .box {
+  width: 150px;
+  height: 150px;
+  border-top: rgba(0, 77, 77, 0.8) solid 5px;
+  border-left: rgba(0, 77, 77, 0.8) solid 5px;
+}
+@media screen and (max-width: 768px) {
+  #about .left .row .box {
     display: none;
   }
 }
-#about .container-about .container-text {
-  background-color: #004d4d;
-  display: grid;
-  grid-row: 1;
-  grid-column: 5/11;
-  z-index: 1;
-  margin: 5% auto;
-  grid-template-columns: repeat(6, 2fr);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+#about .left .row .text-me {
+  font-size: 2.5em;
+  height: 45px;
+  color: #343a40;
+  position: relative;
+  top: -135px;
+  left: 5%;
 }
 @media screen and (max-width: 768px) {
-  #about .container-about .container-text {
-    display: flex;
-    grid-column: 2/12;
-    grid-row: 1/2;
-    margin-top: 2em;
-    margin-left: 2em;
-    z-index: -1;
-    height: 20em;
+  #about .left .row .text-me {
+    display: none;
   }
 }
-#about .container-about .container-text .about-text {
-  padding: 2em 2em 0 1em;
-  display: flex;
-  grid-column: 2/7;
-  grid-row: 1;
+#about .left .row .parra {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+#about .left .row .parra .sole {
+  font-family: "Montserrat", sans-serif;
+  font-size: 18px;
+  color: #004d4d;
 }
 @media screen and (max-width: 768px) {
-  #about .container-about .container-text .about-text {
-    grid-column: 2/7;
-    grid-row: 1;
-    padding: 1em 2em;
+  #about .left .row .parra {
+    padding-right: 20px;
+    font-size: 0.9em;
+    text-align: justify;
+    padding-left: 0%;
+    line-height: 25px;
   }
 }
-#about .container-about .container-text .readMore {
-  grid-column: 1/7;
-  grid-row: 2;
-  justify-self: center;
-  margin-top: auto !important;
-}
-@media screen and (max-width: 768px) {
-  #about .container-about .container-text .readMore {
-    position: absolute;
-    left: 90%;
-    width: fit-content;
-    top: -70%;
-  }
-}
-#about .container-about .container-text .readMore .button-v {
+#about .left .row .readMore .button-v {
   background-color: #343a40;
   border-color: transparent;
   margin-bottom: 0.5em;
@@ -291,12 +260,13 @@ body p {
   transition: 0.5s;
 }
 @media screen and (max-width: 768px) {
-  #about .container-about .container-text .readMore .button-v {
+  #about .left .row .readMore .button-v {
     background-color: #343a40;
-    margin-left: 1em;
+    margin-left: 3em;
+    margin-top: 5px;
   }
 }
-#about .container-about .container-text .readMore .button-v:after {
+#about .left .row .readMore .button-v:after {
   content: "»";
   position: absolute;
   opacity: 0;
@@ -304,34 +274,15 @@ body p {
   right: -20px;
   transition: 0.5s;
 }
-#about .container-about .container-text .readMore .button-v:hover {
+#about .left .row .readMore .button-v:hover {
   padding-right: 24px;
   padding-left: 8px;
+  background-color: #004d4d;
 }
-#about .container-about .container-text .readMore .button-v:hover:after {
+#about .left .row .readMore .button-v:hover:after {
   opacity: 1;
   right: 10px;
   color: white;
-}
-#about .container-about .aboutMe {
-  grid-row: 1/3;
-  writing-mode: vertical-lr;
-  align-self: center;
-  background-color: #343a40;
-  color: white;
-  padding: 10px 5px;
-  width: 3em;
-  height: 60%;
-  text-align: center;
-}
-@media screen and (max-width: 768px) {
-  #about .container-about .aboutMe {
-    display: none;
-  }
-}
-#about .container-about .aboutMe .title {
-  margin: 0;
-  font-family: "Lato", sans-serif;
 }
 
 /* ============= FIN ABOUT ME ============= */
@@ -720,8 +671,8 @@ input[type=radio][id=metal]:checked ~ .packaging {
   transform: rotate(180deg);
 }
 .arrow-container .arrow-content #more-arrows:hover polygon {
-  fill: #004d4d;
-  border: solid white;
+  fill: #343a40;
+  border: solid #343a40;
   transition: all 0.2s ease-out;
 }
 .arrow-container .arrow-content #more-arrows:hover polygon.arrow-bottom {
@@ -731,7 +682,7 @@ input[type=radio][id=metal]:checked ~ .packaging {
   transform: translateY(18px);
 }
 .arrow-container .arrow-content #more-arrows polygon {
-  fill: #004d4d;
+  fill: #343a40;
   transition: all 0.2s ease-out;
 }
 .arrow-container .arrow-content #more-arrows polygon.arrow-middle {
@@ -750,6 +701,11 @@ input[type=radio][id=metal]:checked ~ .packaging {
 .about h3 {
   font-weight: 600;
   font-size: 32px;
+}
+@media screen and (max-width: 768px) {
+  .about {
+    text-align: center;
+  }
 }
 .about p {
   font-size: 15px;
@@ -792,5 +748,66 @@ input[type=radio][id=metal]:checked ~ .packaging {
 }
 
 /*========= END Skills ============*/
+/*--------------------------------------------------------------
+# Portfolio Details
+--------------------------------------------------------------*/
+#portfolio-container .portfolio-details {
+  padding-top: 0;
+}
+#portfolio-container .portfolio-details .portfolio-details-slider {
+  align-items: center;
+}
+#portfolio-container .portfolio-details .portfolio-details-slider .photo-slide img {
+  width: 90%;
+  border-radius: 5px;
+}
+#portfolio-container .portfolio-details .portfolio-details-slider .swiper-pagination {
+  margin-top: 20px;
+  position: relative;
+}
+#portfolio-container .portfolio-details .portfolio-details-slider .swiper-pagination-bullet {
+  width: 12px;
+  height: 12px;
+  background-color: white;
+  opacity: 1;
+  border: 1px solid #004d4d;
+}
+#portfolio-container .portfolio-details .portfolio-details-slider .swiper-pagination-bullet-active {
+  background-color: #004d4d;
+}
+#portfolio-container .side-text .portfolio-info {
+  padding: 30px;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+#portfolio-container .side-text .portfolio-info h3 {
+  font-size: 22px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid white;
+}
+#portfolio-container .side-text .portfolio-info ul {
+  list-style: none;
+  padding: 0;
+  font-size: 15px;
+}
+#portfolio-container .side-text .portfolio-info ul li + li {
+  margin-top: 10px;
+}
+#portfolio-container .side-text .portfolio-description {
+  padding-top: 30px;
+}
+#portfolio-container .side-text .portfolio-description .description-title {
+  font-size: 26px;
+  font-weight: 700;
+  margin-bottom: 20px;
+  color: #343a40;
+  text-align: center;
+}
+#portfolio-container .side-text .portfolio-description .descripcion {
+  padding: 0;
+  color: #343a40;
+  text-align: justify;
+}
 
 /*# sourceMappingURL=style.css.map */
