--- a/scss/components/_aboutMe.scss
+++ b/scss/components/_aboutMe.scss
@@ -1,105 +1,66 @@
 
 /* ============= ABOUT ME ============= */
-
-
-#about{
-    margin-top: 2em; 
-    margin-bottom: 12em;
-    max-height: 200px;
-    padding-top: 1rem!important;
-    margin-right: auto!important;
-    margin-left: auto!important;
-
-    @media screen and (max-width: 768px){
-        justify-content: center!important;
-        max-height: fit-content;
-    }
+#about {
+    display: flex;
     
-    .container-about {
-        display: grid;
-        position: relative; 
-        grid-template-columns: repeat(12, 1fr);
-        
-        @media screen and (max-width: 768px){
-            display: grid;
-            position: relative;
-            grid-template-columns: repeat(12, 2fr);
-            box-shadow: none;
-        }
+    p {
+        color: $txt-gr;
+    }
 
-        .container-img {
-            display: flex;
-            grid-column: 3 / -1;
-            grid-row: 1;
-            box-shadow: $shadow;
+    .left {
+        padding-left: 10%;
+        @media screen and (max-width: 768px){
+        order: 3;
+        }
+        .row {
+            height: 50%;
 
             @media screen and (max-width: 768px){
-                margin-top: -10em;
-                display: flex;
-                grid-column: 2;
-                grid-row: 2;
-                background-color: white;
+                height: 0%;
             }
 
-            .icon{
+            .box {
+                width: 150px;
+                height: 150px;
+                border-top: $bg-opa solid 5px ;
+                border-left: $bg-opa solid 5px;
+
+                @media screen and (max-width: 768px){
+                    display: none;
+                }
+            }
+            .text-me {
+                font-size: 2.5em;
+                height: 45px;
+                color: $txt-gr;
                 position: relative;
-                right: 8.5em;
-                z-index: 3;
-                align-self: center;
-
-                @media screen and (max-width: 768px) {
-                    display: none;                    
-                }
-            }
-        }
-
-        .container-text{
-
-            background-color: $bg-solid;
-            display: grid;
-            grid-row: 1;
-            grid-column: 5 / 11;
-            z-index: 1;
-            margin: 5% auto;
-            grid-template-columns: repeat(6, 2fr);
-            box-shadow: $shadow;
-
-            @media screen and (max-width: 768px) {
-                display: flex;
-                grid-column: 2/12;
-                grid-row: 1/2;
-                margin-top: 2em;
-                margin-left: 2em;
-                z-index: -1;
-                height: 20em;
-            }
-
-            .about-text{
-                padding: 2em 2em 0 1em;
-                display: flex;
-                grid-column: 2 / 7;
-                grid-row: 1;
+                top: -135px;
+                left: 5%;
 
                 @media screen and (max-width: 768px){
-                    grid-column: 2/7;
-                    grid-row: 1;
-                    padding: 1em 2em;
+                    display: none;
                 }
             }
 
-            .readMore{
-                grid-column: 1 / 7;
-                grid-row: 2;
-                justify-self: center;
-                margin-top: auto!important;
+            .parra {
+                padding-left: 30px;
+                padding-right: 40px;
                 
-                @media screen and (max-width: 768px){
-                    position: absolute;
-                    left: 90%;
-                    width: fit-content;
-                    top: -70%;
+                .sole{
+                    font-family: $font-monse;
+                    font-size: 18px;
+                    color: $bg-solid;
                 }
 
+                @media screen and (max-width: 768px){
+                padding-right: 20px;
+                font-size: .9em;
+                text-align: justify;
+                padding-left: 0%;
+                line-height: 25px;
+                }
+            }
+            .readMore {
                 .button-v {
                     background-color: $bg-button;
                     border-color: transparent;
@@ -110,7 +71,8 @@
 
                     @media screen and (max-width: 768px){
                         background-color: $bg-button;
-                        margin-left: 1em;
+                        margin-left: 3em;
+                        margin-top: 5px;
                     }
                     
                     &:after {
@@ -125,6 +87,7 @@
                     &:hover{
                         padding-right: 24px;
                         padding-left:8px;
+                        background-color: $bg-solid;
                     }
                       
                     &:hover:after {
@@ -132,36 +95,14 @@
                         right: 10px;
                         color: $txt-color;
                     }
-
-                   
                 }
             }
-        }
-
-        .aboutMe {
-                grid-row: 1/3;
-                writing-mode: vertical-lr;
-                align-self: center;
-                background-color: $bg-button;
-                color: $txt-color;
-                padding: 10px 5px;
-                width: 3em;
-                height: 60%;
-                text-align: center;
-
-            @media screen and (max-width: 768px){
-                display: none;
-            }
-
-            .title {
-                margin: 0;
-                font-family: $font-lato;
-            }
 
         }
-                 
     }
 }
+
+
 
 
 
