--- a/scss/components/_arrowUp.scss
+++ b/scss/components/_arrowUp.scss
@@ -27,8 +27,8 @@
             transform: rotate(180deg);
             &:hover {        
                 polygon {
-                    fill: $bg-solid;
-                    border: solid $txt-color;
+                    fill: $txt-gr;
+                    border: solid $txt-gr;
                     transition: all .2s ease-out;
                     
             
@@ -46,7 +46,7 @@
         
     
             polygon {
-                fill: $bg-solid;
+                fill: $txt-gr;
                 transition: all .2s ease-out;
                             
                 &.arrow-middle {
