--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,7 @@ input[type=radio]:checked + label {
 }
 
 /*Filtros*/
-input[type=radio][id=renders]:checked ~ .furniture,
+input[type=radio][id=renders]:checked ~ .stands,
 input[type=radio][id=renders]:checked ~ .prototypes,
 input[type=radio][id=renders]:checked ~ .packaging,
 input[type=radio][id=renders]:checked ~ .metal {
@@ -437,10 +437,10 @@ input[type=radio][id=renders]:checked ~ .metal {
   transition: 0.5s;
 }
 
-input[type=radio][id=furniture]:checked ~ .renders,
-input[type=radio][id=furniture]:checked ~ .prototypes,
-input[type=radio][id=furniture]:checked ~ .packaging,
-input[type=radio][id=furniture]:checked ~ .metal {
+input[type=radio][id=stands]:checked ~ .renders,
+input[type=radio][id=stands]:checked ~ .prototypes,
+input[type=radio][id=stands]:checked ~ .packaging,
+input[type=radio][id=stands]:checked ~ .metal {
   width: 0;
   height: 0;
   padding: 0;
@@ -450,7 +450,7 @@ input[type=radio][id=furniture]:checked ~ .metal {
 }
 
 input[type=radio][id=prototypes]:checked ~ .renders,
-input[type=radio][id=prototypes]:checked ~ .furniture,
+input[type=radio][id=prototypes]:checked ~ .stands,
 input[type=radio][id=prototypes]:checked ~ .packaging,
 input[type=radio][id=prototypes]:checked ~ .metal {
   width: 0;
@@ -462,7 +462,7 @@ input[type=radio][id=prototypes]:checked ~ .metal {
 }
 
 input[type=radio][id=packaging]:checked ~ .renders,
-input[type=radio][id=packaging]:checked ~ .furniture,
+input[type=radio][id=packaging]:checked ~ .stands,
 input[type=radio][id=packaging]:checked ~ .prototypes,
 input[type=radio][id=packaging]:checked ~ .metal {
   width: 0;
@@ -474,7 +474,7 @@ input[type=radio][id=packaging]:checked ~ .metal {
 }
 
 input[type=radio][id=metal]:checked ~ .renders,
-input[type=radio][id=metal]:checked ~ .furniture,
+input[type=radio][id=metal]:checked ~ .stands,
 input[type=radio][id=metal]:checked ~ .prototypes,
 input[type=radio][id=metal]:checked ~ .packaging {
   width: 0;
@@ -748,18 +748,19 @@ input[type=radio][id=metal]:checked ~ .packaging {
 }
 
 /*========= END Skills ============*/
-/*--------------------------------------------------------------
-# Portfolio Details
---------------------------------------------------------------*/
+/* ========= Portfolio Details ========= */
 #portfolio-container .portfolio-details {
   padding-top: 0;
+  margin-bottom: 5%;
 }
 #portfolio-container .portfolio-details .portfolio-details-slider {
   align-items: center;
 }
 #portfolio-container .portfolio-details .portfolio-details-slider .photo-slide img {
   width: 90%;
-  border-radius: 5px;
+  border-radius: 10px;
+  border: 1px solid #BFBFBF;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
 }
 #portfolio-container .portfolio-details .portfolio-details-slider .swiper-pagination {
   margin-top: 20px;
