--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,14 @@ body p {
   justify-content: flex-end;
   margin-right: 4%;
 }
+.breadcrumb a {
+  color: #0b8686;
+  text-decoration: none;
+}
+.breadcrumb a:hover {
+  text-decoration: underline;
+  color: #0b8686;
+}
 
 /* ========= FIN Generales a toda la pagina  ========= */
 /* ========= NAVBAR / MENU  ========= */
@@ -59,10 +67,14 @@ body p {
   transition: top 8s;
   background-color: #343a40;
 }
-.navbar .container-fluid #language:hover {
-  color: #004d4d;
-  /*No toma el color*/
+.navbar .container-fluid #language a:hover {
+  background-color: #004d4d !important;
+  border-radius: 2px;
   cursor: pointer;
+}
+.navbar .container-fluid .navbar-toggler {
+  background-color: white;
+  border: none;
 }
 .navbar .container-fluid .button {
   justify-content: space-between;
@@ -77,13 +89,10 @@ body p {
 .navbar .container-fluid .navbar-menu {
   justify-content: center;
 }
-.navbar .container-fluid .navbar-menu li:hover {
-  color: #004d4d !important;
-  /*No toma el color*/
+.navbar .container-fluid .navbar-menu li a:hover {
+  background-color: #004d4d !important;
+  border-radius: 2px;
   cursor: pointer;
-}
-.navbar .container-fluid .navbar-menu li a:active {
-  color: #004d4d !important;
 }
 .navbar .container-fluid #socialMedia ul li a {
   color: white;
@@ -190,8 +199,19 @@ body p {
 #about {
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  #about {
+    display: grid;
+  }
+}
 #about p {
   color: #343a40;
+}
+@media screen and (max-width: 768px) {
+  #about .right {
+    width: 90%;
+    justify-self: center;
+  }
 }
 #about .left {
   padding-left: 10%;
@@ -199,6 +219,8 @@ body p {
 @media screen and (max-width: 768px) {
   #about .left {
     order: 3;
+    padding: 10px 20px;
+    width: 100%;
   }
 }
 #about .left .row {
@@ -244,11 +266,10 @@ body p {
 }
 @media screen and (max-width: 768px) {
   #about .left .row .parra {
-    padding-right: 20px;
     font-size: 0.9em;
     text-align: justify;
-    padding-left: 0%;
     line-height: 25px;
+    width: 100%;
   }
 }
 #about .left .row .readMore .button-v {
@@ -261,9 +282,9 @@ body p {
 }
 @media screen and (max-width: 768px) {
   #about .left .row .readMore .button-v {
-    background-color: #343a40;
-    margin-left: 3em;
-    margin-top: 5px;
+    margin: 10px 0;
+    justify-self: center;
+    width: 100%;
   }
 }
 #about .left .row .readMore .button-v:after {
@@ -496,6 +517,7 @@ input[type=radio][id=metal]:checked ~ .packaging {
 @media screen and (max-width: 768px) {
   .gallery-image {
     height: auto;
+    width: 30%;
   }
 }
 .gallery-image img {
@@ -504,6 +526,10 @@ input[type=radio][id=metal]:checked ~ .packaging {
   object-fit: cover;
   transition: 0.5s;
   border: 10px;
+}
+.gallery-image p {
+  font-size: large;
+  line-height: 1.2;
 }
 
 /*Hover Section*/
@@ -538,7 +564,8 @@ input[type=radio][id=metal]:checked ~ .packaging {
 }
 @media screen and (max-width: 768px) {
   .cap1 h3 {
-    font-size: inherit;
+    font-size: initial;
+    margin-top: -8px;
   }
 }
 .cap1 p {
@@ -570,9 +597,12 @@ input[type=radio][id=metal]:checked ~ .packaging {
   color: #343a40;
   text-decoration: none;
 }
-.cap2 a p {
-  color: white;
-  font-size: 1em;
+@media screen and (max-width: 768px) {
+  .cap2 p {
+    font-size: initial;
+    line-height: 1.2;
+    color: white;
+  }
 }
 
 /* ========== FIN PORTFOLIO =========*/
@@ -757,7 +787,7 @@ input[type=radio][id=metal]:checked ~ .packaging {
   align-items: center;
 }
 #portfolio-container .portfolio-details .portfolio-details-slider .photo-slide img {
-  width: 90%;
+  width: 100%;
   border-radius: 10px;
   border: 1px solid #BFBFBF;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
