--- a/scss/components/_portfolio.scss
+++ b/scss/components/_portfolio.scss
@@ -146,7 +146,7 @@ input[type="radio"][id="metal"]:checked ~ .packaging {
     p {
         font-size: large;
         line-height: 1.2;
-        $txt-color
+        color: $txt-color
     }
 }
 
