--- a/scss/base/_variables.scss
+++ b/scss/base/_variables.scss
@@ -15,6 +15,7 @@ $Subtitle-size: 2em;
 $txt-color: white;
 $subtxt-color: black;
 $txt-gr:  #343a40;
+$txt-gr-light:  #7e8388;
 
 $bg-opa: rgba(0, 77, 77, 0.8);
 $bg-solid: #004d4d;
