--- a/scss/components/_skills.scss
+++ b/scss/components/_skills.scss
@@ -8,6 +8,9 @@
 }
 
 .skills {
+    @media screen and (max-width: 768px){
+        order: 4;
+    }
     .feat-item {
         padding: 0;
         margin: 30px 0;
