--- a/scss/components/_portfolio-details.scss
+++ b/scss/components/_portfolio-details.scss
@@ -72,7 +72,7 @@
             }
 
             .descripcion {
-                padding: 0;
+                padding: 0 15px;
                 color: $txt-gr;
                 text-align: justify;
             } 
