--- a/css/style.css
+++ b/css/style.css
@@ -803,6 +803,10 @@ input[type=radio][id=metal]:checked ~ .packaging {
   padding-top: 0;
   margin-bottom: 5%;
 }
+#portfolio-container .portfolio-details .video-container {
+  justify-content: center;
+  display: flex;
+}
 #portfolio-container .portfolio-details .portfolio-details-slider {
   align-items: center;
 }
@@ -811,6 +815,10 @@ input[type=radio][id=metal]:checked ~ .packaging {
   border-radius: 10px;
   border: 1px solid #BFBFBF;
   box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+#portfolio-container .portfolio-details .portfolio-details-slider .photo-slide .video {
+  width: 100%;
+  height: 100%;
 }
 #portfolio-container .portfolio-details .portfolio-details-slider .swiper-pagination {
   margin-top: 20px;
